--- a/_posts/0000-01-02-miminguy3n.md
+++ b/_posts/0000-01-02-miminguy3n.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our Miminguy3n's deck!"
 ---
-This is my awesome slide
+This is my awesome slide 🎉
 Use the right arrow to begin!
